FIX: RM#62621 Display line breaks in AnswersPreview and PDF

--- a/themes/sdlt/src/scss/components/Quesionnaire/_AnswerPreview.scss
+++ b/themes/sdlt/src/scss/components/Quesionnaire/_AnswerPreview.scss
@@ -1,5 +1,7 @@
 .AnswersPreview {
     .questions {
+        white-space: pre-line;
+
         .row {
             background-color: rgba(255, 255, 255, 0.7);
             margin-left: 0;
